# python_structure_example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  visualization.ipynb
src/: examplescript.py
