[tool.poetry]
name = "vsc_demo_python"
version = "0.1.0"
description = ""
authors = ["Sunniva Indrehus <sunniva.indrehus@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.2.4"
numpy = "^1.20.3"
xarray = "^0.18.2"
jupytext = "^1.11.2"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
setuptools = "^57.0.0"
netCDF4 = "^1.5.6"
dask = "^2021.5.0"
Bottleneck = "^1.3.2"
poetry2conda = "^0.3.0"
pre-commit = "^2.13.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.5b1"
flake8 = "^3.9.2"


[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files
float_to_top=true
known_third_party = []

[flake8]
max-line-length = 121

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "vsc-demo-python"

[tool.poetry2conda.dependencies]
quetzal-client = { channel = "pip" }

